@@ -5,17 +5,17 @@ use warnings;
 use App::RewriteVersion;
 use Getopt::Long::Modern 'auto_help';
 
-our $VERSION = '0.007';
+our $VERSION = '1.000';
 
 GetOptions(
-	'D|dist-dir=s'       => \my $dist_dir,
-	'd|dry-run'          => \my $dry_run,
-	'f|from=s'           => \my $version_from,
-	'g|global'           => \my $global,
-	'L|follow-symlinks'  => \my $follow,
-	't|trial'            => \my $is_trial,
-	'u|allow-underscore' => \my $underscore,
-	'v|verbose'          => \my $verbose,
+	'D|dist-dir=s'        => \my $dist_dir,
+	'd|dry-run'           => \my $dry_run,
+	'f|from=s'            => \my $version_from,
+	'g|global'            => \my $global,
+	'L|follow-symlinks'   => \my $follow,
+	't|trial'             => \my $is_trial,
+	'u|allow-underscore!' => \my $underscore,
+	'v|verbose'           => \my $verbose,
 );
 
 my $subdirs = @ARGV ? [@ARGV] : undef;
@@ -40,7 +40,7 @@ perl-bump-version - A tool to bump your Perl module versions
  perl-bump-version [options] [subdir ...]
  
    perl-bump-version --from lib/Foo/Bar.pm
-   perl-bump-version --trial --allow-underscore lib script
+   perl-bump-version --trial --no-allow-underscore lib script
    perl-bump-version -LdgvD /opt/projects/Foo-Bar/
    V=v1.0.0 perl-bump-version
 
@@ -51,7 +51,7 @@ perl-bump-version - A tool to bump your Perl module versions
    -g, --global                 rewrite versions globally instead of just the first per file (default: disabled)
    -L, --follow-symlinks        follow symlinks when finding perl files to rewrite (default: disabled)
    -t, --trial                  mark version as a trial version (default: disabled)
-   -u, --allow-underscore       allow decimal versions with underscores (default: disabled)
+   -u, --allow-underscore       allow decimal versions with underscores (default: enabled)
    -v, --verbose                print progress messages to STDOUT (default: disabled)
 
 =head1 DESCRIPTION
@@ -112,7 +112,8 @@ which is outside of the scope of this tool.
 
 =head2 -u, --allow-underscore
 
-Allow decimal versions with underscores. See
+Allow decimal versions with underscores. Enabled by default, use
+C<--no-allow-underscore> to disable. See
 L<Dist::Zilla::Plugin::BumpVersionAfterRelease/"Using underscore in decimal $VERSION">
 for more information.
 
