@@ -1,4 +1,7 @@
 {{$NEXT}}
+  - Default allow_decimal_underscore to enabled. Underscores in decimal
+    versions are not ideal, but they are still the most convenient method of
+    indicating a developer release when not using Dist::Zilla.
 
 0.006     2018-04-21 19:40:09 EDT
   - Use and recognize tr/_//d to remove underscores from versions
